[gd_scene load_steps=4 format=2]

[ext_resource path="res://Network/custom_multiplayer.gd" type="Script" id=1]
[ext_resource path="res://Lobby/LobbyUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Network/network.gd" type="Script" id=3]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="LobbyUI" parent="." instance=ExtResource( 2 )]

[node name="Client" type="Node" parent="."]
script = ExtResource( 3 )
__meta__ = {
"_editor_icon": null
}

[node name="Game" type="Node" parent="Client"]

[node name="Players" type="Node" parent="Client"]

[connection signal="host_server" from="LobbyUI" to="Client" method="_on_LobbyUI_host_server"]
[connection signal="join_server" from="LobbyUI" to="Client" method="_on_LobbyUI_join_server"]
[connection signal="leave_server" from="LobbyUI" to="Client" method="_on_LobbyUI_leave_server"]
[connection signal="local_player" from="LobbyUI" to="Client" method="_on_LobbyUI_local_player"]
[connection signal="start_game" from="LobbyUI" to="Client" method="_on_LobbyUI_start_game"]
[connection signal="player_connected" from="Client" to="LobbyUI" method="_on_player_connected"]
[connection signal="player_disconnected" from="Client" to="LobbyUI" method="_on_player_disconnected"]
[connection signal="register_player" from="Client" to="LobbyUI" method="_on_register_player"]
[connection signal="server_disconnected" from="Client" to="LobbyUI" method="_on_disconnectButton_pressed"]
